public/style.css
/* ... */
/**
 * Change the border, margin, and padding in all browsers (opinionated).
 */

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * 1. Add the correct display in IE 9-.
 * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  display: inline-block; /* 1 */
  vertical-align: baseline; /* 2 */
}

/**
 * Remove the default vertical scrollbar in IE.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10-.
 * 2. Remove the padding in IE 10-.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */

/*
 * Add the correct display in IE 9-.
 * 1. Add the correct display in Edge, IE, and Firefox.
 */

details, /* 1 */
menu {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/* Scripting
   ========================================================================== */

/**
 * Add the correct display in IE 9-.
 */

canvas {
  display: inline-block;
}

/**
 * Add the correct display in IE.
 */

template {
  display: none;
}

/* Hidden
   ========================================================================== */

/**
 * Add the correct display in IE 10-.
 */

[hidden] {
  display: none;
}



/*------- normalize end ------*/

html {
  /*color: rgb(250,250,250);*/
  height: 100%;
  width: 100%;
  font-size: 85%;
}

body {
  font-family: 'Lato', sans-serif;
  height: 100%;
  min-height: 100vh;
  font-size: 1.1rem;
}

p {
  font-size: 1.1rem;
  display: inline;
}


h1 {  font-size: 3.6rem;   font-family: 'Lora', serif;}
h2 {
  display: inline-block;
  font-size: 2.4rem;
  font-family: 'Lora', serif;
  margin: .5rem;
  color: rgba(252,252,252,0.8);
}
h3 {  font-size: 2.0rem;   font-family: 'Lora', serif;}
h4 {
  display: inline-block;
  font-size: 1.8rem;
  font-family: 'Lora', sans-serif;
  margin: .3rem;
}
h5 {
  display: inline-block;
  font-size: 1.6rem;
  font-family: 'Lora', serif;
  margin: .3rem;
}
h6 {  font-size: 1.0rem;   font-family: 'Lora', serif;}


/* grid */
.row {
  overflow: hidden
}
[class*='col-'] {
  box-sizing: border-box;
  float: left;
}
.col-12 {
  width: 100%;
  box-sizing: border-box;
}
.col-6-s {
  width: 50%;

}
.col-4-s {
  width: 33.3%;

}
.col-3-s {
  width: 25%;

}
.col-2-s {
  width: 16.66%;

}


/* EnterVisitor */
#div-main-visitor {
  padding: 0rem;
  min-width: 760px;
}
.parallax {
  background-image: url('img/IMG_2979_.jpg');
  height: 100%;
  width: 100vw;

  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover, auto;
}
#div-view {
  padding: 5% 2%;
  min-height: 100vh;
  box-sizing: border-box;
}

/* EnterVisitor -> Scroll -> Navbar */
#navbar {
  position: fixed;
  top: 0px;
  width: 100%;
  height: 60px;
  background-color: transparent;
  color: #000000;
  padding: 7px 16px;
  z-index: 2;
  min-width: 750px;
  box-sizing: border-box;
}
#navbar-name {
  position: fixed;
  top: 0px;
  width: 100%;
  height: 60px;
  background-color: transparent;
  color: #000000;
  padding: 7px 16px;
  z-index: 2;
  box-sizing: border-box;
}
#catface {
  float: right;
  /*position: fixed;
  top: 10px;
  right: 15px;
  display: inline;
  text-align: right;*/
}
.menu {
  position: absolute;
  top: 64px;
  right: 30px;
  background-color: white;
  z-index: 5;
  /*width: 100px;*/
  /*  height: 50px*/;
  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
}

/* EnterVisitor -> Scroll -> Navbar2 */
#navbar2 {
  position: fixed;
  top: 60px;
  width: 100%;
  background-color: transparent;
  color: #000000;
  padding: 3px 15px;
  min-width: 750px;
  box-sizing: border-box;
}
#clock-span {
  float: right;
}
.heading {
  font-size: 1.1rem;
}
#visitor-headings {
  padding: 0rem 1.8rem;
}
.hspace-1 {
  display: inline-block;
  width: 4.1rem;
}
.hspace-1a {
  display: inline-block;
  width: 5.5rem;
}
.hspace-1b {
  display: inline-block;
  width: 6.2rem;
}
.hspace-2 {
  display: inline-block;
  width: 6.6rem;
}
.hspace-2a {
  display: inline-block;
  width: 7.4rem;
}
.hspace-3 {
  display: inline-block;
  width: 8.5rem;
}
.hspace-4 {
  display: inline-block;
  width: 9.3rem;
}
.hspace-5 {
  display: inline-block;
  width: 12.2rem;
}


/* VisitorsContainer */
.div-container {
  margin-top: 105px;
  padding: 1.5rem 1.5rem;
  background-color: rgba(250,250,250,0.6);
  min-width: 730px;
}

/* VisitorContainer -> Visitors */
.div-inner-container {
  background-color: rgba(250,250,250,0.8);
  min-width: 730px;
}
/* ... */

